--- a/806 final project.qmd
+++ b/806 final project.qmd
@@ -1,9 +1,9 @@
 ---
-title: "Insert your appropriate/descriptive title name here"
-subtitle: "sub title" 
+title: "title"
+subtitle: "BIOL806 final project" 
 bibliography: bib.bib
-author: "Your Name Here"
-institute: 'Middlebury College'
+author: "Gabrielle Jarrett"
+institute: 'UNH'
 format:
   html: 
     code-overflow: wrap
@@ -15,23 +15,12 @@ execute:
   message: false
 ---
 
-## Quarto
+# Introduction 
 
-Quarto enables you to weave together content and executable code into a finished document. To learn more about Quarto see <https://quarto.org>.
+# Methods 
 
-## Running Code
+# Results
 
-When you click the **Render** button a document will be generated that includes both content and the output of embedded code. You can embed code like this:
+# Discussion
 
-```{r}
-1 + 1
-```
-
-You can add options to executable code like this 
-
-```{r}
-#| echo: false
-2 * 2
-```
-
-The `echo: false` option disables the printing of code (only output is displayed).
+# Bibliography
